# InvictusHiring

./: .gitignore  .mcp.json  CLAUDE.md  README.md  backend_architecture.md  docker-compose.prod.yml  docker-compose.yml  lld.md  local_dump_data.sql  pyproject.toml  pytest.ini
.github/workflows/: deploy.yml
Data/: jobs_results.json  prepare_kaggle_data.py  scrape_indeed.py  scrapper.py  seed_past_jds.py  training_data.csv
backend/: .dockerignore  BACKEND_ARCHITECTURE.md  Dockerfile  eval_rag.py  ml_train.py  training_data.csv
backend/app/: main.py
backend/app/api/routes/: auth.py  (+8 more)
backend/app/core/: config.py  database.py  dependencies.py  limiter.py  logging.py  mcp_client.py  prompt_guard.py  redis.py  security.py
backend/app/db/: models.py  queries.py
backend/app/services/: agent_telemetry.py  analytics_agent.py  cv_screener.py  email_sender.py  interview_agent.py  jd_agent.py  job_poster_agent.py  ml_agent.py  ml_features.py  ml_predictor.py  rag.py  sql_ast_validator.py  supervisor.py
backend/hiring_mcp/: client.py  server.py
backend/migrations/: 000_full_schema.sql  001_init.sql  002_candidate_cv_screening.sql  003_interview_scheduling.sql  004_agent_runs.sql  005_ml_outcome_fields.sql  006_cover_letter_file.sql  007_job_expiry.sql  008_prompt_versions.sql  009_ml_predictions.sql  010_interview_feedback.sql
backend/tests/: conftest.py  test_api_jd.py  test_config.py  test_jd_agent.py  test_ml_api.py  test_ml_features.py  test_ml_predictor.py  test_models.py  test_rag.py  test_rag_eval.py  test_sql_ast_validator.py
backend/tests/integration/: conftest.py  test_analytics_schema.py  test_db_models.py  test_rag_integration.py
frontend/: Dockerfile  FIGMA_DESIGN_SYSTEM.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: agents.ts  analytics.ts  auth.ts  candidates.ts  jd.ts  telemetry.ts
frontend/src/hooks/: useJDSession.ts
frontend/src/lib/: download.ts
frontend/src/pages/: JobBoardPage.tsx  JobDetailPage.tsx
infra/: AWS_SETUP.md  deploy.sh  ecs-task-definition.json
ml_models/: fit_model.joblib  fit_report.txt  join_model.joblib  join_report.txt
(+23 files in other folders)
