[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "serpapi>=1.0.2",
    "sqlalchemy>=2.0.49",
    "sse-starlette>=3.4.1",
    "uvicorn>=0.46.0",
    "mcp>=1.9.0",
    "playwright>=1.59.0",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "python-docx>=1.2.0",
    "nemoguardrails>=0.21.0",
    "sqlglot>=30.7.0",
    "langsmith>=0.8.0",
    "redis[asyncio]>=5.0",
    "scikit-learn>=1.8.0",
    "pandas>=2.3.3",
    "numpy>=2.4.4",
    "joblib>=1.5.3",
    "kaggle>=2.1.2",
    "ragas>=0.3.1",
    "datasets>=4.8.5",
    "shap>=0.46.0",
    "numba>=0.60.0",
    "llvmlite>=0.43.0",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
